@@ -34,9 +34,10 @@ public class StatementPool implements Runnable,Pool {
      *
      * @param connectionPool connection pool
      */
-    protected StatementPool(ConnectionPool connectionPool) {
+    protected StatementPool(ConnectionPool connectionPool, boolean checkConnections) {
         this.connectionPool = connectionPool;
-        checkTimeoutThread = new Thread(this);
+        this.checkConnections = checkConnections;
+        if(checkConnections) checkTimeoutThread = new Thread(this);
 //        checkTimeoutThread.start();
     }
 
@@ -53,7 +54,7 @@ public class StatementPool implements Runnable,Pool {
             if (statement.isValid()) {
                 if (!statement.isInUse() && !(connection = (ConnectionWrapper)statement.getConnection()).isBusy()) {
                     // check connection
-                    if (connection.check()) {
+                    if (!checkConnections || connection.check()) {
                         statement.notifyInUse();
                         return statement;
                     }
@@ -155,6 +156,10 @@ public class StatementPool implements Runnable,Pool {
     /** is the thread running?
      */
     private boolean running = true;
+
+    /** do we need to check connections?
+     */
+    private boolean checkConnections = true;
 
     /** delay between checks.
      */
